# vispa

./: CITATION.cff  CMakeLists.txt  README.md  action.yml  matlab_import.m  package.xml
.github/workflows/: main.yml
AirbusDefenceAndSpace/vispa/: README.md
AirbusDefenceAndSpace/vispa/ghrs-data/: stargazers.csv  views_clones_aggregate.csv
AirbusDefenceAndSpace/vispa/ghrs-data/snapshots/: 2022-03-22_162652_top_paths_snapshot.csv  2022-03-22_162652_views_clones_series_fragment.csv  2022-03-22_231845_views_clones_series_fragment.csv  2022-03-23_231828_top_paths_snapshot.csv  2022-03-23_231828_views_clones_series_fragment.csv  2022-03-24_231848_top_paths_snapshot.csv  2022-03-24_231848_views_clones_series_fragment.csv  2022-03-25_231802_top_paths_snapshot.csv  2022-03-25_231802_views_clones_series_fragment.csv  2022-03-26_231745_top_referrers_snapshot.csv  2022-03-26_231745_views_clones_series_fragment.csv  (+540 more)
AirbusDefenceAndSpace/vispa/latest-report/: report.html  report.md  report_for_pdf.html
launch/: display.launch  display.launch.py
meshes/: LINK_0_col.stl  LINK_1_col.stl  LINK_2_col.stl  LINK_3_col.stl  LINK_4_col.stl  LINK_5.stl  LINK_5_col.stl  LINK_BASE.stl  LINK_BASE_col.stl  Link0-DHReference-PublicRelease.stl  Link1-DHReference-PublicRelease.stl  Link2-DHReference-PublicRelease.stl  Link3-DHReference-PublicRelease.stl  Link6-DHReference-PublicRelease.stl  package.xml
rviz/: vispa_ros1.rviz  vispa_ros2.rviz
urdf/: README.md  VISPA_modifiedDH.urdf  VISPA_modifiedDH_CoppeliaSim.urdf  VISPA_modifiedDH_Ros2.urdf  vispa.urdf  vispa.xacro
